test/files/neg/t13014.scala
class C(x: Int = 0, y: Int = 0)(implicit blup: String)
class D extends C(y = 1)
